app/find-person/find-person.scss
@import "../css/app.scss";

* {
    margin: 0;
    padding: 0;
    list-style: none
}

p,
table {
    font-size: 1em
}

a {
    color: #24A0D8
}

#wrapper {
    height: 84%;
    font-family: Arial, "Helvetica Neue", helvetica, sans-serif;
    background-color: #fff;
    color: #000;
    font-size: 69%;
    text-align: center;
}

#wrapper-persons {
    overflow-y: scroll;
    overflow-x: none;
    width: 70%;
    height: 100%;
    float: left;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select:none;
    user-select:none;
    -o-user-select:none
}

#wrapper-scrollbar {
    float: right;
    height: 880px;
    margin-right: 3em
}

::-webkit-scrollbar {
    width: 0
}

#person-header {
    padding: 2.4em 2.4em 0 2.4em;
}

#search-container {
    font-size: 3em;
    height: 55px;
    max-width: 100%;
    display: table-cell;
    border: 1px solid #9a9a9a;
    line-height: 55px;
}

#person-search-input {
    width: 480px;
    height: 100%;
    font-size: .8em;
    padding-left: .5em;
    float: left;
    border: none;
}

#person-search-schools {
  float: left;
  font-size: 1.5rem;
  height: 100%;
  padding: 0 0.75em;
  border-right: 1px solid #9a9a9a;
  border-left: 1px solid #9a9a9a;
  position: relative;
  cursor: pointer;
}

#person-search-schools-current {
  text-align: center;
  height: 100%;
  position: relative;
  line-height: inherit;
  margin-right: 1em;
}

#person-search-schools-current mark {
  transform: rotate(90deg);
  position: absolute;
  background: none;
  margin-left: 0.5em;
  color: #83a552;
}

#schools-wrapper {
  font-size: 1.5rem;
  display: table;
  position: absolute;
  margin-left: 481px;
  margin-top: 1px;
}

#schools-wrapper ul {
  font-family: Arial;
  border-bottom: 1px solid #adafb2;
  border-left: 1px solid #adafb2;
  border-right: 1px solid #adafb2;
  float: left;
  background-color: #fff;
}

#schools-wrapper li {
  line-height: 2rem;
  display: block;
  padding: 0.7rem 2.1rem;
  border-top: 1px solid #adafb2;
  text-align: center;
}

#schools-wrapper li:hover {
  background-color: #f1f1f1;
}

#schools-wrapper li:first-child {
}

#schools-wrapper li:last-child {
}

#departments-wrapper {
  margin-left: 1px;
  float: left;
}

#departments-wrapper li:last-child {
  border-bottom: 1px solid #adafb2;
}

#departments-wrapper button {
  width: 100%;
  border: 1px solid #adafb2;
  background: #fff;
  height: 55px;
  color: #83a552;
  outline:none;
}

#departments-wrapper button:first-child p {
  line-height: 0px;
}

#departments-wrapper button:last-child p {
  line-height: 0px;
}

#departments-wrapper button:first-child p mark {
  position: absolute;
  transform: rotate(-90deg);
  color: #83a552;
}

#departments-wrapper button:last-child p mark {
  position: absolute;
  color: #83a552;
  transform: rotate(90deg);
}

#departments {
  white-space: nowrap;
  position: static !important;
  border-bottom: none !important;
  float: none !important;
  max-width: 1020px;
  max-height: 810px;
  overflow-x: hidden;
  overflow-y: scroll;
}

#departments li:first-child {
}

#departments li:last-child {
}

#person-search-button {
    height: 3.5rem;
    width: 97px;
    background-image: url(app/find-person/images/glass.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 38%;
    background-color: #83a552;
    float: left;
    border: none
}

#search-input-string {
    text-align: left;
    font-size: 2.5em;
    margin: 1rem 0 2rem 0;
    color: #818087;
}

.popup-pos {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99999;
    background-color: rgba(0, 0, 0, .7);
    width: 100%;
    height: 100%;
    z-index:10;
}

.popup-wrapper {
    width: 1000px;
    margin: 250px auto;
}

#popup-content {
    background-color: #fff;
    min-height: 500px;
    max-height: 900px;
    display: table;
    border-radius: 4px
}

.popup-person {
    width: 65%;
    height: inherit;
    float: left;
    text-align: left;
}

.popup-person-wrapper {
    font-size: 3em;
    margin: 0.75em;
}

.popup-person-name {
}

.popup-person-title {
    font-size: .6em;
    margin-top: 0.2em;
    color: #818087;
}
.popup-person-status{
  font-size: .6em;
  margin-top: 0.2em;
  color: #818087;
}
.popup-person-line {
    border-bottom: 1px dashed gray;
    width: 100%;
    margin-top: .75em;
    margin-bottom: 1em;
}

.popup-person table {
    font-size: 0.5em;
    margin-bottom: 3em;
}

.popup-person table td {
  color: #000;
}

.popup-person table .category {
    font-family: Arial;
    font-weight: bold;
    padding-right: 2em;
    padding-top: 0.15em;
}

.popup-person-about {
    font-size: 0.75em;
    color: #000;
    overflow: hidden;
    max-height: 600px;
}

.popup-person-about p {
    color: #000;
    margin-top: 0.25em;
    font-size: 0.75em;
    font-family: sans-serif;
}

.popup-person-about .popup-person-line {
    border-bottom: 1px solid gray;
    margin-top: .25em;
    margin-bottom: .75em;
}

.popup-image {
    width: 35%;
    float: right;
    height: inherit;
    text-align: center;
}

.popup-image img {
    margin-top: 2em;
    width: 70%;
    border-radius: 50%;
}

.active {
    display: block
}

.disabled {
    display: none;
    color: gray;
    border: solid gray
}

.person-wrapper {
    display: inline-block;
    width: 100%
}

.personId {
    width: 100%;
    padding-top: .2em;
    padding-bottom: .2em;
    text-align: left;
    background-color: #2E7CC0;
    overflow: auto
}

.personId h4 {
    font-size: 4.2em;
    margin: 0 .25em;
    font-weight: 400;
    color: #fff;
}

.person {
    width: 100%;
    display: inline-block;
    margin-bottom: 2em;
    margin-top: 2em;
    float: left
}

.person-image {
    width: 100%;
}

.person-info-left {
    padding-right: 40px
}

.person-info table {
    margin: 0 auto 1em
}

.person img {
    border-radius: 50%;
    margin-top: 1.5em;
    width: 50%;
}

#person-table {

  cursor: pointer;
  width: 100%;
}

#person-table thead th {
  font-size: 2em;
  border-top: 1px dotted #111111;
  border-bottom: 1px dotted #111111;
  padding: 0.25em;
  min-width: 156px;
}

#person-table thead th:first-child {
  /* border: none;
  min-width: 0; */
}

#person-table thead th p {
  float: left;
  text-decoration: underline;
}

#person-table thead th mark {
  background: none;
  color: #83a552;
  transform: rotate(90deg);
  float: left;
  margin-left: 0.5em;
}

#firstname, #email, #phone, #title {
  display: none;
}

#person-table tr {
}

#person-table tr:nth-child(even) {

}
#person-table tr:nth-child(odd) {
}

#person-table tr td:first-child {
  max-width:100%;
white-space:nowrap;
align-content: center;
  /* border: none !important;
  color: #2e7cc0; */
}

#person-table tr td:nth-child(1), td:nth-child(2) {
  color: #2e7cc0;
}

#person-table td {
  border-top: 1px dotted #e3e5e3;
  font-size: 2em;
  padding: 0.5em 0.25em 0.5em 0.5em;
}

#person-table td img {
  width: 20px
}

